# scanslator

./: .gitignore  PRD.md  PROJECT_PLAN.md  docker-compose.yml  error.txt
backend/: Dockerfile  check_tesseract.py  main.py  prompts.py  requirements.txt
backend/app/: settings.py
backend/app/engine/: __init__.py  factory.py  models.py  pipeline.py
backend/app/engine/services/: export.py  ingestion.py  ocr.py  translation.py
backend/app/shared/: __init__.py  status.py
backend/orchestrator/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/orchestrator/app/: __init__.py  constants.py  main.py  migrations_runner.py  queue.py  schemas.py  storage.py
backend/orchestrator/app/routes/: jobs.py
backend/orchestrator/migrations/: env.py
backend/orchestrator/migrations/versions/: 20251008_01_create_jobs_tables.py
backend/sdk/: __init__.py  client.py  exceptions.py  models.py
backend/worker/: runner.py
docs/: PRD.md  PROJECT_PLAN.md  README.md  orchestrator-worker-architecture.md
frontend/: Dockerfile  index.html  nginx.conf  package.json  vite.config.js
frontend/src/: App.vue
scripts/: compose-up.ps1
