[tool.poetry]
name = "orchestrator"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112"
uvicorn = {extras = ["standard"], version = "^0.30"}
python-dotenv = "^1.0"
redis = "^5.0"
httpx = "^0.27"
sqlalchemy = "^2.0"
psycopg = {extras = ["binary"], version = "^3.2"}
alembic = "^1.13"
